--- a/productos.css
+++ b/productos.css
@@ -2,6 +2,12 @@ header{
     background: #BBBBBB;
 }
 
+.caja{
+    width: 940px;
+    position: relative;
+    margin: 0 auto;
+}
+
 nav{
     position: absolute;
     top: 110px;
