Set up my parameters of productos

--- a/productos.css
+++ b/productos.css
@@ -28,3 +28,12 @@ nav a{
     font-size: 22px;
     text-decoration: none;
 }
+
+.productos{
+    width: 940px;
+    margin: 0 auto;
+}
+
+.productos li{
+    display: inline-block;
+}
