Setting up my class description and precio

--- a/productos.css
+++ b/productos.css
@@ -46,3 +46,12 @@ nav a{
     font-size: 30px;
     font-weight: bold;
 }
+
+.descripcion{
+    font-size: 18px;
+}
+
+.precio{
+    font-size: 30px;
+    font-weight: bold;
+}
