Putting a border to each product

--- a/productos.css
+++ b/productos.css
@@ -41,9 +41,13 @@ nav a{
     width: 30%;
     vertical-align: top;
     margin: 0 1.5%;
-    padding: 30px 10px;
+    padding: 30px 20px;
     /* limita el espacio que tengo poniendo como limite el tamaño del item en este caso 30% */
     box-sizing: border-box;
+    /* tambien lo puedo hacer con border: width, style, color */
+    border-color: #000000;
+    border-width: 2px;
+    border-style: solid;
 }
 
 .productos h2{
