--- a/productos.css
+++ b/productos.css
@@ -48,6 +48,7 @@ nav a{
     border-color: #000000;
     border-width: 2px;
     border-style: solid;
+    border-radius: 10px;
 }
 
 .productos h2{
