--- a/productos.css
+++ b/productos.css
@@ -29,6 +29,12 @@ nav a{
     text-decoration: none;
 }
 
+/* hover captura el movimiento de mi mouse */
+nav a:hover{
+    color: #c78c19;
+    text-decoration: underline;
+}
+
 .productos{
     width: 940px;
     margin: 0 auto;
