--- a/productos.css
+++ b/productos.css
@@ -57,6 +57,10 @@ nav a:hover{
     border-radius: 10px;
 }
 
+.productos li:hover{
+    border-color: #c78c19;
+}
+
 .productos h2{
     font-size: 30px;
     font-weight: bold;
