--- a/productos.css
+++ b/productos.css
@@ -61,6 +61,11 @@ nav a:hover{
     border-color: #c78c19;
 }
 
+/* detecta cuando le doy click a algun elemento */
+.productos li:active{
+    border-color: #088c19;
+}
+
 .productos h2{
     font-size: 30px;
     font-weight: bold;
