Adding footer in CSS

--- a/style_barberia.css
+++ b/style_barberia.css
@@ -47,3 +47,15 @@ ul{
 .imagen_diferenciales{
     width: 50%;
 }
+
+footer{
+    text-align: center;
+    background: url(imagenes/bg.jpg);
+    padding: 40px;
+}
+
+.copyright{
+    color: #FFFFFF;
+    font-size: 13px;
+    margin: 20px;
+}
