Adding italic to mision

--- a/style_barberia.css
+++ b/style_barberia.css
@@ -23,9 +23,13 @@ em strong{
     color: red;
 }
 
-#mision{
+#localización{
     font-size: 20px;
     padding: 20px;
+}
+
+#mision{
+    font-style: italic;
 }
 
 .principal{
