--- a/style_contacto.css
+++ b/style_contacto.css
@@ -46,10 +46,13 @@ form{
 
 form label{
     display: block;
+    font-size: 20px;
+    margin: 0 0 10px;
 }
 
 form input{
     display: block;
+    margin: 0 0 20px;
 }
 
 footer{
