--- a/style_contacto.css
+++ b/style_contacto.css
@@ -61,6 +61,25 @@ form label, form legend{
     margin: 20px 0;
 }
 
+.enviar{
+    width: 40%;
+    padding: 15px 0;
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
+    background: orange;
+    border: none;
+    border-radius: 5px;
+    transition: 1s all;
+    cursor: pointer;
+}
+
+.enviar:hover{
+    background: darkorange;
+    transform: scale(1.20);
+
+}
+
 footer{
     text-align: center;
     background: url(imagenes/bg.jpg);
