--- a/style_contacto.css
+++ b/style_contacto.css
@@ -80,6 +80,22 @@ form label, form legend{
 
 }
 
+table{
+    margin: 40px 40px;
+}
+
+thead{
+    background: #555555;
+    color: white;
+    font-weight: bold;
+}
+
+td, th{
+    border: 1px solid #000000;
+    padding: 8px 15px;
+}
+
+
 footer{
     text-align: center;
     background: url(imagenes/bg.jpg);
