--- a/style_home.css
+++ b/style_home.css
@@ -35,7 +35,7 @@ nav a:hover{
     text-decoration: underline;
 }
 
-#banner{
+.banner{
     width: 100%;
     height: 600px;
 }
@@ -43,7 +43,8 @@ nav a:hover{
 .titulo{
     text-align: center;
     font-weight: bold;
-    font-size: 25px;
+    font-size: 2em;
+    margin: 0 0 1em;
 }
 
 p{
