--- a/style_home.css
+++ b/style_home.css
@@ -40,10 +40,6 @@ nav a:hover{
     height: 600px;
 }
 
-.principal{
-    padding: 20px;
-}
-
 .titulo{
     text-align: center;
     font-weight: bold;
@@ -59,7 +55,7 @@ nav a:hover{
     margin: 0 20px 20px 0;
 }
 
-p{
+.principal p{
     margin: 0 0 1em;
 }
 
