--- a/style_home.css
+++ b/style_home.css
@@ -40,6 +40,10 @@ nav a:hover{
     height: 600px;
 }
 
+body{
+    font-family: 'Montserrat', sans-serif;
+}
+
 .titulo{
     text-align: center;
     font-weight: bold;
@@ -104,6 +108,11 @@ em strong{
 
 .imagen_diferenciales{
     width: 50%;
+}
+
+.video{
+    width: 560px;
+    margin: 1em auto;
 }
 
 footer{
