Changes in width of my main

--- a/style_home.css
+++ b/style_home.css
@@ -44,6 +44,11 @@ body{
     font-family: 'Montserrat', sans-serif;
 }
 
+main{
+    width: 60%;
+    margin: 0 auto;
+}
+
 .titulo{
     text-align: center;
     font-weight: bold;
