--- a/style_home.css
+++ b/style_home.css
@@ -59,6 +59,7 @@ main{
 
 .utencilios{
     width: 120px;
+    height: 160px;
     float: left;
     /* superior-derecha-inferior-izquierda */
     margin: 0 20px 20px 0;
