--- a/style_productos.css
+++ b/style_productos.css
@@ -35,6 +35,10 @@ nav a:hover{
     text-decoration: underline;
 }
 
+body{
+    font-family: 'Montserrat', sans-serif;
+}
+
 .productos{
     width: 940px;
     margin: 0 auto;
