--- a/style_home.css
+++ b/style_home.css
@@ -115,6 +115,11 @@ em strong{
     line-height: 2;
 }
 
+/* first child me identifica el primer hijo de la clase items */
+.items:first-child{
+    font-weight: bold;
+}
+
 .imagen-diferenciales{
     width: 60%;
 }
