--- a/style_home.css
+++ b/style_home.css
@@ -35,11 +35,6 @@ nav a:hover{
     text-decoration: underline;
 }
 
-.banner{
-    width: 100%;
-    height: 600px;
-}
-
 body{
     font-family: 'Montserrat', sans-serif;
 }
@@ -47,6 +42,21 @@ body{
 main{
     width: 60%;
     margin: 0 auto;
+}
+
+.banner{
+    width: 100%;
+    height: 600px;
+}
+
+.principal{
+    background: #FEFEFE;
+    /* arriba y abajo | izquierda y derecha */
+    padding: 2em 1em 0;
+}
+
+.principal p{
+    margin: 0 0 1em;
 }
 
 .titulo{
@@ -63,10 +73,6 @@ main{
     float: left;
     /* superior-derecha-inferior-izquierda */
     margin: 0 20px 20px 0;
-}
-
-.principal p{
-    margin: 0 0 1em;
 }
 
 em strong{
@@ -96,8 +102,8 @@ em strong{
 }
 
 .diferenciales{
-    background: #FFFFFF;
     padding: 1em 0;
+    background: #888888;
 }
 
 .contenido-diferenciales{
