--- a/style_home.css
+++ b/style_home.css
@@ -42,6 +42,7 @@ body{
 .banner{
     width: 940px;
     height: 600px;
+    display: block;
     margin: 0 auto;
 }
 
@@ -92,8 +93,7 @@ em strong{
 
 .mapa{
     padding: 3em 0;
-    width: 940px;
-    margin: 0 auto;
+    background: linear-gradient(#FEFEFE,#888888);
 }
 
 .mapa-contenido{
@@ -112,6 +112,7 @@ em strong{
 }
 
 .contenido-diferenciales{
+    width: 940px;
     margin: 0 auto;
 }
 
@@ -136,9 +137,18 @@ em strong{
 }
 
 .video{
+    margin: 0 auto;
+    background: #888888;
+}
+
+.video h3{
+    padding: 1em 0 0;
+}
+
+.contenido-video{
     width: 560px;
-    padding: 1em 0;
-    margin: 1em auto;
+    padding: 0 0 2em;
+    margin: 0 auto;
 }
 
 footer{
