--- a/style_home.css
+++ b/style_home.css
@@ -127,6 +127,10 @@ em strong{
     line-height: 2;
 }
 
+.items:before{
+    content: "★";
+}
+
 /* first child me identifica el primer hijo de la clase items */
 .items:first-child{
     font-weight: bold;
@@ -134,6 +138,8 @@ em strong{
 
 .imagen-diferenciales{
     width: 60%;
+    /* eje y- eje x-Degradado-color */
+    box-shadow: 10px 10px 25px #000000;
 }
 
 .video{
