--- a/style_home.css
+++ b/style_home.css
@@ -168,3 +168,19 @@ footer{
     font-size: 13px;
     margin: 20px;
 }
+
+/* Sección de responsividad */
+@media screen and (max-width:480px){
+    h1{
+        text-align: center;
+    }
+    nav{
+        position: static;
+    }
+    .caja, .principal, .mapa-contenido, .contenido-diferenciales, .video {
+        width: auto;
+    }
+    .lista-diferenciales, .imagen-diferenciales{
+        width: 100%;
+    }
+}
