--- a/style_home.css
+++ b/style_home.css
@@ -41,7 +41,6 @@ body{
 
 .banner{
     width: 940px;
-    height: 600px;
     display: block;
     margin: 0 auto;
 }
@@ -170,17 +169,17 @@ footer{
 }
 
 /* Sección de responsividad */
-@media screen and (max-width:480px){
+@media screen and (max-width:950px){
     h1{
         text-align: center;
     }
     nav{
         position: static;
     }
-    .caja, .principal, .mapa-contenido, .contenido-diferenciales, .video {
+    .caja, .principal, .mapa-contenido, .contenido-diferenciales, .video, .contenido-video {
         width: auto;
     }
-    .lista-diferenciales, .imagen-diferenciales{
+    .banner, .lista-diferenciales, .imagen-diferenciales{
         width: 100%;
     }
 }
