--- a/style_productos.css
+++ b/style_productos.css
@@ -104,5 +104,19 @@ footer{
 }
 
 @media screen and (max-width:950px){
+    h1{
+        text-align: center;
+    }
     
+    nav{
+        position: static;
+    }
+    
+    .caja, .productos{
+        width: auto;
+    }
+
+    .productos li{
+        display: block;
+    }
 }
