Adding productos li to width auto

--- a/style_productos.css
+++ b/style_productos.css
@@ -112,7 +112,7 @@ footer{
         position: static;
     }
     
-    .caja, .productos{
+    .caja, .productos,.productos li{
         width: auto;
     }
 
