--- a/style_contacto.css
+++ b/style_contacto.css
@@ -111,3 +111,21 @@ footer{
     font-size: 13px;
     margin: 20px;
 }
+
+@media screen and (max-width:950px){
+    h1{
+        text-align: center;
+    }
+    
+    nav{
+        position: static;
+    }
+
+    nav li{
+        display: grid;
+        text-align: center;
+        padding: 5px 0;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
