--- a/style_contacto.css
+++ b/style_contacto.css
@@ -128,4 +128,8 @@ footer{
         margin-left: auto;
         margin-right: auto;
     }
+
+    main, .input-padron, .enviar, .caja{
+        width: auto;
+    }
 }
